src/App.css
.App {
  text-align: center;
}

.App-header {

  min-height: 100px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  font-size: calc(18px);
  color: black;

}

.App-link {
  color: #61dafb;
}

.intro {
  min-height: 800px;
  background-color: #282c34;
  background-image: url('https://image.freepik.com/free-vector/abstract-blurred-gradient-mesh-background_1159-3170.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: white;
    background-size: cover;
}

.intro-text {
  margin-left: 150px;
  margin-top: 50px;
}

.intro p {
    font-size: 1.5em;
    font-family: 'Julius Sans One', sans-serif;
    color: white;
  }

h2 {
  font-size: 3.5em;
}

section {
  min-height: 400px;
  display: flex;
  align-items: center;
  flex-direction: column;
  padding-top: 20px;
}

hr {
  margin: 0 auto 50px auto;
  min-width: 500px;
  border-top: 1px solid;

}

hr .body-darker {

  border-color: 'dark-grey';

}

p {
  font-family: 'Open Sans', sans-serif;
  padding: 0 180px 0 180px;
  color: #5b5b5b;
  line-height: 1.6;
  font-size: 1.2em;
}

ul {
  list-style-type: none;
}

ul li {
  display: inline;
}


.nav-item {
  margin: 10px;
}

.pagepanel.black {
  background: black;
  color: white;
}

.pagepanel.black p {
  color: #C0C0C0;
  
}

.logos {
  display: flex;
  justify-content: center;
  font-size: 6.5em;
  color: #5b5b5b;
}

.logos li {
  margin: 30px;
}

.logos a {
  color: inherit;
}
.pagepanel.white {
  background: white;
  color: black;
}

